--- a/gb/23/8/28/n14062538.md
+++ b/gb/23/8/28/n14062538.md
@@ -12,10 +12,6 @@
 <p>现年50岁、已在公司待了28年的萧伯宗，目前是铝锭排料作业员，每天至少要搬150颗平均重量70公斤的铝锭，“以往都是把铝锭用人力拖到定位，相当耗体力且会腰酸背痛”，后来公司添购H型省力臂搬运机，让他搬运铝锭轻松省力不少，直说“疲劳感减少，工作更开心”。</p>
 <p>“相当感谢公司”，另位49岁的CNC工程师江明忆则是使用数位卡尺的受益者，他表示，传统的量测式卡尺有时误差大，不仅影响产品良率，对眼睛的伤害也不小，使用数位卡尺后，就比较不会有误差的问题，工作品质提高，自然愿意更投入工作，工作效率也提高不少。◇</p>
 <p>责任编辑：昌英</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/15/n11590056.md#1">无障碍视障者 职务再设计翻转障碍</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13982246.md#1">台疫后大缺工 人力银行：中高龄工作数3年来成长近3倍</a></li>
@@ -24,40 +20,34 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041587.md#1">促进中高龄及高龄者就业 劳动部推出奖励金</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14056069.md#1">美首次申请失业金人数下降 劳动力市场仍紧俏</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059153.md#1">特鲁多：移民能带来劳动力 以解决缺房问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060197.md#1">庇护工场中秋礼开卖 购买比捐钱更有意义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059528.md#1">台南国际音乐节重磅登场 扩及历史景点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058933.md#1">台南市前议长选立委 送小一新生中国劣质蜡笔惹议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106041.md#1">台湾文学奖揭晓 陈列《残骸书》获金典奖大奖</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106032.md#1">曾文水库50岁 联通管调度南部水资源</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105981.md#1">反共台商眼中的中国 一个变态的国家</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/6/n10834250.md#1" target="_blank">林辉：一生没有得到思维乐趣的王小波之父</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623688.md#1" target="_blank">比利时母亲30年车祸创痛 读转法轮4个月消失</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/7/n10284443.md#1" target="_blank">林辉：受蒋介石赞赏的“苗王”被逼自杀背后</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058486.md#1">真实的宋代爱情故事：比苏东坡还深情，“瞎了我也爱你”的刘庭式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061794.md#1">【菁英论坛】美国逮捕王振迪 活摘内幕能否揭开</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061762.md#1">【马克时空】美日韩首脑峰会 三国军力整合备战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061790.md#1">【新闻五人行】永远是发展国家？习宣示梦失败</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061643.md#1">分析：李强搞“逢迎政治”中共到最后一代</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061754.md#1">习近平回国直奔新疆 会议中八次强调“稳定”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061250.md#1">分析：福岛排核处理水 中共导演闹剧瞒真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061312.md#1">受《好声音》负评波及 唐嫣录综艺节目惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061231.md#1">李玟生前控诉引爆舆论 《好声音》暂停播出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061213.md#1">佐藤麻衣恢单后首复工 访台宣告回归演艺圈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061347.md#1">77岁狄龙车祸后首露面 精神奕奕为孙子庆生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061128.md#1">余文乐因恐慌症减少露面 想往幕后发展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060846.md#1">如何减少痛感？ 美CIA解密文件曝生活秘技</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058593.md#1">静脉曲张可致栓塞命危 1动作促血液回流 中医4招改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060472.md#1">能量饮料让你提神？5副作用伤大脑 这类人要小心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061029.md#1">如何阻止小狗对邮差吠叫？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/28/n14062538.htm">留住中高龄人才 “职务再设计”帮大忙</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062538.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
